# curiosuly-connected-words

./: .gitignore  .gitmodules  README.md  pyproject.toml
src/neo4j_helper/: __main__.py  code_to_langs.py  relationship.py  vertex.py  word2vec_model.py
